[package]
name = "packet"
version = "0.1.0"
edition = "2021"
authors = ["Darek Stojaczyk <darek@stojaczyk.pl>"]
license = "MIT"
description = """
Packet structure definitions for Cabal Online server services
"""

[dependencies]
packet_proc = { version = "0.1.0", path = "../packet_proc" }
aria = { git = "https://github.com/darsto/aria.git", branch = "master" }
genmatch = { git = "https://github.com/darsto/genmatch.git", branch = "master" }
anyhow = "1.0"
thiserror = "1.0"
static_assertions = "1.1"
bincode = "2.0.0-rc.3"
paste = "1.0"
