[package]
name = "packet_proc"
version = "0.1.0"
edition = "2021"
authors = ["Darek Stojaczyk <darek@stojaczyk.pl>"]
license = "MIT"
description = """
Procedural macro to simplify defining packet structures
"""

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0" }
proc-macro2 = { version = "1.0" }
