[package]
name = "server"
version = "0.1.0"
edition = "2021"
exclude = ["/.*"]

[[bin]]
name = "cabalsrv"
path = "src/main.rs"

[features]
default = ["event", "crypto", "proxy", "gms", "login", "party"]
event = []
crypto = []
proxy = []
gms = []
login = []
party = []

[dependencies]
packet = { path = "../packet" }
async_proc = { git = "https://github.com/darsto/async_proc.git" }
aria = { git = "https://github.com/darsto/aria.git", branch = "master" }
borrow_mutex = { git = "https://github.com/darsto/borrow_mutex.git" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo", "string"] }
num_enum = "0.7"
smol = "2.0"
syn = { version = "2.0", features = ["derive", "extra-traits"] }
thiserror = "1.0.61"
futures = "0.3.30"
bincode = "2.0.0-rc.3"
rand = "0.8.5"
log = "0.4.20"
env_logger = "0.10.1"
rsa = { version = "0.9.7", features = ["sha2"] }
sha1 = "0.10.6"
crossbeam-queue = "0.3.11"
